gen/MymssmallbasicParser.java
// Generated from C:/Users/johanlap21/Desktop/antlrmssmallbasicinter/grammar\Mymssmallbasic.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MymssmallbasicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, MUL=17, 
		DIV=18, ADD=19, SUB=20, OBJKEYWORD=21, LINE_COMMENT=22, WS=23, AND=24, 
		OR=25, EQ=26, ROP=27, NEQ=28, GTE=29, LTE=30, GT=31, LT=32, LPAREN=33, 
		RPAREN=34, LBRACK=35, RBRACK=36, INT=37, DOUBLE=38, ID=39, STRING=40, 
		NEWLINE=41;
	public static final int
		RULE_inicio = 0, RULE_block = 1, RULE_blocknosub = 2, RULE_statement = 3, 
		RULE_statementnosub = 4, RULE_vardeclexpr = 5, RULE_arrdeclexpr = 6, RULE_expr = 7, 
		RULE_label = 8, RULE_funccall = 9, RULE_keyobjcall = 10, RULE_compexpr = 11, 
		RULE_arithexpr = 12, RULE_term = 13, RULE_factor = 14, RULE_atom = 15, 
		RULE_forexpr = 16, RULE_ifexpr = 17, RULE_elseifexpr = 18, RULE_elseexpr = 19, 
		RULE_whileexpr = 20, RULE_funcdef = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "block", "blocknosub", "statement", "statementnosub", "vardeclexpr", 
			"arrdeclexpr", "expr", "label", "funccall", "keyobjcall", "compexpr", 
			"arithexpr", "term", "factor", "atom", "forexpr", "ifexpr", "elseifexpr", 
			"elseexpr", "whileexpr", "funcdef"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'.'", "','", "'FOR'", "'To'", "'Step'", "'EndFor'", "'If'", 
			"'Then'", "'EndIf'", "'ElseIf'", "'Else'", "'While'", "'EndWhile'", "'Sub'", 
			"'EndSub'", "'*'", "'/'", "'+'", "'-'", null, null, null, "'And'", "'Or'", 
			"'='", null, "'<>'", "'>='", "'<='", "'>'", "'<'", "'('", "')'", "'['", 
			"']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "MUL", "DIV", "ADD", "SUB", "OBJKEYWORD", 
			"LINE_COMMENT", "WS", "AND", "OR", "EQ", "ROP", "NEQ", "GTE", "LTE", 
			"GT", "LT", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "INT", "DOUBLE", 
			"ID", "STRING", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mymssmallbasic.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MymssmallbasicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MymssmallbasicParser.EOF, 0); }
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			block();
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> EOF() { return getTokens(MymssmallbasicParser.EOF); }
		public TerminalNode EOF(int i) {
			return getToken(MymssmallbasicParser.EOF, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(MymssmallbasicParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MymssmallbasicParser.NEWLINE, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 549762146576L) != 0)) {
				{
				{
				setState(47);
				statement();
				setState(55);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(51);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(48);
						match(NEWLINE);
						}
						}
						setState(53);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case 2:
					{
					setState(54);
					match(EOF);
					}
					break;
				}
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocknosubContext extends ParserRuleContext {
		public List<StatementnosubContext> statementnosub() {
			return getRuleContexts(StatementnosubContext.class);
		}
		public StatementnosubContext statementnosub(int i) {
			return getRuleContext(StatementnosubContext.class,i);
		}
		public List<TerminalNode> EOF() { return getTokens(MymssmallbasicParser.EOF); }
		public TerminalNode EOF(int i) {
			return getToken(MymssmallbasicParser.EOF, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(MymssmallbasicParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MymssmallbasicParser.NEWLINE, i);
		}
		public BlocknosubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blocknosub; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitBlocknosub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocknosubContext blocknosub() throws RecognitionException {
		BlocknosubContext _localctx = new BlocknosubContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_blocknosub);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 549762113808L) != 0)) {
				{
				{
				setState(62);
				statementnosub();
				setState(70);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__3:
				case T__6:
				case T__7:
				case T__9:
				case T__10:
				case T__11:
				case T__12:
				case T__13:
				case T__15:
				case OBJKEYWORD:
				case LINE_COMMENT:
				case ID:
				case NEWLINE:
					{
					setState(66);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(63);
						match(NEWLINE);
						}
						}
						setState(68);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case EOF:
					{
					setState(69);
					match(EOF);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public VardeclexprContext vardeclexpr() {
			return getRuleContext(VardeclexprContext.class,0);
		}
		public ArrdeclexprContext arrdeclexpr() {
			return getRuleContext(ArrdeclexprContext.class,0);
		}
		public ForexprContext forexpr() {
			return getRuleContext(ForexprContext.class,0);
		}
		public IfexprContext ifexpr() {
			return getRuleContext(IfexprContext.class,0);
		}
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public WhileexprContext whileexpr() {
			return getRuleContext(WhileexprContext.class,0);
		}
		public TerminalNode LINE_COMMENT() { return getToken(MymssmallbasicParser.LINE_COMMENT, 0); }
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public KeyobjcallContext keyobjcall() {
			return getRuleContext(KeyobjcallContext.class,0);
		}
		public FunccallContext funccall() {
			return getRuleContext(FunccallContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				vardeclexpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				arrdeclexpr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				forexpr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				ifexpr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				funcdef();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				whileexpr();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(83);
				match(LINE_COMMENT);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(84);
				label();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(85);
				keyobjcall();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(86);
				funccall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementnosubContext extends ParserRuleContext {
		public VardeclexprContext vardeclexpr() {
			return getRuleContext(VardeclexprContext.class,0);
		}
		public ArrdeclexprContext arrdeclexpr() {
			return getRuleContext(ArrdeclexprContext.class,0);
		}
		public ForexprContext forexpr() {
			return getRuleContext(ForexprContext.class,0);
		}
		public IfexprContext ifexpr() {
			return getRuleContext(IfexprContext.class,0);
		}
		public WhileexprContext whileexpr() {
			return getRuleContext(WhileexprContext.class,0);
		}
		public TerminalNode LINE_COMMENT() { return getToken(MymssmallbasicParser.LINE_COMMENT, 0); }
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public KeyobjcallContext keyobjcall() {
			return getRuleContext(KeyobjcallContext.class,0);
		}
		public FunccallContext funccall() {
			return getRuleContext(FunccallContext.class,0);
		}
		public StatementnosubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementnosub; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitStatementnosub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementnosubContext statementnosub() throws RecognitionException {
		StatementnosubContext _localctx = new StatementnosubContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statementnosub);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				vardeclexpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				arrdeclexpr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				forexpr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				ifexpr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(93);
				whileexpr();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(94);
				match(LINE_COMMENT);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(95);
				label();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(96);
				keyobjcall();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(97);
				funccall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VardeclexprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MymssmallbasicParser.ID, 0); }
		public TerminalNode EQ() { return getToken(MymssmallbasicParser.EQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public KeyobjcallContext keyobjcall() {
			return getRuleContext(KeyobjcallContext.class,0);
		}
		public VardeclexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclexpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitVardeclexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VardeclexprContext vardeclexpr() throws RecognitionException {
		VardeclexprContext _localctx = new VardeclexprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_vardeclexpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(ID);
			setState(101);
			match(EQ);
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADD:
			case SUB:
			case LPAREN:
			case INT:
			case DOUBLE:
			case ID:
			case STRING:
				{
				setState(102);
				expr();
				}
				break;
			case OBJKEYWORD:
				{
				setState(103);
				keyobjcall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrdeclexprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MymssmallbasicParser.ID, 0); }
		public TerminalNode EQ() { return getToken(MymssmallbasicParser.EQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> LBRACK() { return getTokens(MymssmallbasicParser.LBRACK); }
		public TerminalNode LBRACK(int i) {
			return getToken(MymssmallbasicParser.LBRACK, i);
		}
		public List<TerminalNode> RBRACK() { return getTokens(MymssmallbasicParser.RBRACK); }
		public TerminalNode RBRACK(int i) {
			return getToken(MymssmallbasicParser.RBRACK, i);
		}
		public List<TerminalNode> INT() { return getTokens(MymssmallbasicParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(MymssmallbasicParser.INT, i);
		}
		public List<TerminalNode> STRING() { return getTokens(MymssmallbasicParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(MymssmallbasicParser.STRING, i);
		}
		public ArrdeclexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrdeclexpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitArrdeclexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrdeclexprContext arrdeclexpr() throws RecognitionException {
		ArrdeclexprContext _localctx = new ArrdeclexprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arrdeclexpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(ID);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LBRACK) {
				{
				{
				setState(107);
				match(LBRACK);
				setState(108);
				_la = _input.LA(1);
				if ( !(_la==INT || _la==STRING) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(109);
				match(RBRACK);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(EQ);
			setState(116);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public List<CompexprContext> compexpr() {
			return getRuleContexts(CompexprContext.class);
		}
		public CompexprContext compexpr(int i) {
			return getRuleContext(CompexprContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(MymssmallbasicParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(MymssmallbasicParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(MymssmallbasicParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(MymssmallbasicParser.OR, i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			compexpr();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(119);
				_la = _input.LA(1);
				if ( !(_la==AND || _la==OR) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(120);
				compexpr();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MymssmallbasicParser.ID, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(ID);
			setState(127);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunccallContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MymssmallbasicParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(MymssmallbasicParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MymssmallbasicParser.RPAREN, 0); }
		public FunccallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funccall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitFunccall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunccallContext funccall() throws RecognitionException {
		FunccallContext _localctx = new FunccallContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funccall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(ID);
			setState(130);
			match(LPAREN);
			setState(131);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class KeyobjcallContext extends ParserRuleContext {
		public TerminalNode OBJKEYWORD() { return getToken(MymssmallbasicParser.OBJKEYWORD, 0); }
		public TerminalNode ID() { return getToken(MymssmallbasicParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(MymssmallbasicParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MymssmallbasicParser.RPAREN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public KeyobjcallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyobjcall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitKeyobjcall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KeyobjcallContext keyobjcall() throws RecognitionException {
		KeyobjcallContext _localctx = new KeyobjcallContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_keyobjcall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(OBJKEYWORD);
			setState(134);
			match(T__1);
			setState(135);
			match(ID);
			setState(136);
			match(LPAREN);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2070175809536L) != 0)) {
				{
				setState(137);
				expr();
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(138);
					match(T__2);
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2070175809536L) != 0)) {
						{
						setState(139);
						expr();
						}
					}

					}
					}
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(149);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompexprContext extends ParserRuleContext {
		public List<ArithexprContext> arithexpr() {
			return getRuleContexts(ArithexprContext.class);
		}
		public ArithexprContext arithexpr(int i) {
			return getRuleContext(ArithexprContext.class,i);
		}
		public List<TerminalNode> ROP() { return getTokens(MymssmallbasicParser.ROP); }
		public TerminalNode ROP(int i) {
			return getToken(MymssmallbasicParser.ROP, i);
		}
		public CompexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compexpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MymssmallbasicVisitor ) return ((MymssmallbasicVisitor<? extends T>)visitor).visitCompexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompexprContext compexpr() throws RecognitionException {
		CompexprContext _localctx = new CompexprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_compexpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			arithexpr();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ROP) {
				{
				{
				setState(152);
				match(ROP);
				setState(153);
				arithexpr();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
